[package]
name = "iced_table"
version = "0.1.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A table widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_table"

[workspace]
default-members = [
    "./example"
]
members = [
    ".",
    "./example",
]

[dependencies]
iced_core = { git = "https://github.com/iced-rs/iced", rev = "7dd32f3be43c72e11dac5e07918e9ad6d36b6555" }
iced_style = { git = "https://github.com/iced-rs/iced", rev = "7dd32f3be43c72e11dac5e07918e9ad6d36b6555" }
iced_widget = { git = "https://github.com/iced-rs/iced", rev = "7dd32f3be43c72e11dac5e07918e9ad6d36b6555" }
